@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.8 2002/12/23 13:13:29 tron Exp $
+$NetBSD: distinfo,v 1.9 2004/03/09 22:49:48 minskim Exp $
 
-SHA1 (tkcvs_7_1_2.tar.gz) = 01342ef43bb6d04bb1daa9b760510ccc60e8ba6a
-Size (tkcvs_7_1_2.tar.gz) = 239874 bytes
+SHA1 (tkcvs_7_2.tar.gz) = 1f2f2e745545ed42fd677bafd4682103e7f86bc4
+Size (tkcvs_7_2.tar.gz) = 279525 bytes
 SHA1 (patch-aa) = a9d50bce32e84d9b7e23244957430fca57a765cd
