@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.1489 2004/03/09 22:47:46 minskim Exp $
+$NetBSD: TODO,v 1.1490 2004/03/09 22:49:48 minskim Exp $
 
 Suggested new packages
 ======================
@@ -329,7 +329,6 @@ Suggested package updates
 	o tcpreplay-2.0.2
 	o tct-1.14
 	o teapop-0.3.8
-	o tkcvs-7.2
 	o tkman-2.2
 	o tmda-1.0.2
 	o top-3.5b12.10
